[gd_scene load_steps=11 format=2]

[ext_resource path="res://TestingWorld.gd" type="Script" id=1]
[ext_resource path="res://addons/dialogue_tree/scripts/dialogue.gd" type="Script" id=2]
[ext_resource path="res://addons/dialogue_tree/assets/Icon.png" type="Texture" id=3]
[ext_resource path="res://addons/dialogue_tree/assets/ResIcon.png" type="Texture" id=4]
[ext_resource path="res://addons/dialogue_tree/resource/dialogue_tree.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"

[sub_resource type="Animation" id=2]
resource_name = "New Anim2"

[sub_resource type="Resource" id=3]
script = ExtResource( 5 )
__meta__ = {
"_editor_icon": ExtResource( 4 )
}
connections = [ {
"from": "BasicDialogue",
"from_port": 0,
"to": "EndNode",
"to_port": 0
}, {
"from": "StartNode",
"from_port": 0,
"to": "ChoiceDialogue",
"to_port": 0
}, {
"from": "ChoiceDialogue",
"from_port": 0,
"to": "BasicDialogue",
"to_port": 0
}, {
"from": "ChoiceDialogue",
"from_port": 1,
"to": "BasicDialogue",
"to_port": 0
} ]
Nodes = [ {
"filename": "res://addons/dialogue_tree/scenes/EndNode.tscn",
"name": "EndNode",
"rect_size_x": 80.0,
"rect_size_y": 55.0,
"rect_x": 1055.0,
"rect_y": 310.0
}, {
"filename": "res://addons/dialogue_tree/scenes/StartNode.tscn",
"name": "StartNode",
"rect_size_x": 87.0,
"rect_size_y": 55.0,
"rect_x": 248.0,
"rect_y": 156.0
}, {
"Actor": "",
"Dialogue": "",
"FormattedDialogue": "",
"RefName": "test2",
"filename": "res://addons/dialogue_tree/scenes/BasicDialogue.tscn",
"name": "BasicDialogue",
"rect_size_x": 170.0,
"rect_size_y": 114.0,
"rect_x": 565.0,
"rect_y": 280.0
}, {
"Conditonal": false,
"RefName": "Test",
"choices": [ {
"Conditional": "",
"Dialogue": "",
"FormattedDialogue": "",
"ToolTip": ""
}, {
"Conditional": "",
"Dialogue": "",
"FormattedDialogue": "",
"ToolTip": ""
}, {
"Conditional": "",
"Dialogue": "",
"FormattedDialogue": "",
"ToolTip": ""
} ],
"filename": "res://addons/dialogue_tree/scenes/ChoiceDialogue.tscn",
"name": "ChoiceDialogue",
"rect_size_x": 210.0,
"rect_size_y": 168.0,
"rect_x": 440.0,
"rect_y": 77.0
} ]
DialogueTree = {
"dialogue": [ {
"Actor": "",
"Dialogue": "",
"FormattedDialogue": "",
"NodeName": "BasicDialogue",
"Ref": "test2",
"next": "End"
}, {
"Choices": [ {
"Conditional": "",
"Dialogue": "",
"FormattedDialogue": "",
"PassCondition": true,
"ToolTip": "",
"next": 0
}, {
"Conditional": "",
"Dialogue": "",
"FormattedDialogue": "",
"PassCondition": true,
"ToolTip": "",
"next": 0
}, {
"Conditional": "",
"Dialogue": "",
"FormattedDialogue": "",
"PassCondition": true,
"ToolTip": ""
} ],
"Conditonal": false,
"NodeName": "ChoiceDialogue",
"Ref": "Test"
} ],
"start_index": 1
}

[sub_resource type="Resource" id=4]
script = ExtResource( 5 )
__meta__ = {
"_editor_icon": ExtResource( 4 )
}
connections = [  ]
Nodes = [ {
"filename": "res://addons/dialogue_tree/scenes/StartNode.tscn",
"name": "StartNode",
"rect_size_x": 87.0,
"rect_size_y": 55.0,
"rect_x": -704.542,
"rect_y": 87.0
}, {
"filename": "res://addons/dialogue_tree/scenes/EndNode.tscn",
"name": "EndNode",
"rect_size_x": 80.0,
"rect_size_y": 55.0,
"rect_x": -4.54205,
"rect_y": 127.0
} ]
DialogueTree = {
"dialogue": [  ],
"start_index": 0
}

[sub_resource type="Resource" id=5]
script = ExtResource( 5 )
__meta__ = {
"_editor_icon": ExtResource( 4 )
}
connections = [ {
"from": "StartNode",
"from_port": 0,
"to": "BasicDialogue",
"to_port": 0
}, {
"from": "BasicDialogue",
"from_port": 0,
"to": "ChoiceDialogue",
"to_port": 0
}, {
"from": "ChoiceDialogue",
"from_port": 2,
"to": "EndNode",
"to_port": 0
}, {
"from": "ChoiceDialogue",
"from_port": 0,
"to": "BasicDialogue2",
"to_port": 0
}, {
"from": "BasicDialogue2",
"from_port": 0,
"to": "BasicDialogue",
"to_port": 0
}, {
"from": "ChoiceDialogue",
"from_port": 1,
"to": "BasicDialogue3",
"to_port": 0
}, {
"from": "BasicDialogue3",
"from_port": 0,
"to": "BasicDialogue",
"to_port": 0
} ]
Nodes = [ {
"filename": "res://addons/dialogue_tree/scenes/StartNode.tscn",
"name": "StartNode",
"rect_size_x": 87.0,
"rect_size_y": 55.0,
"rect_x": 240.184,
"rect_y": -121.75
}, {
"filename": "res://addons/dialogue_tree/scenes/EndNode.tscn",
"name": "EndNode",
"rect_size_x": 80.0001,
"rect_size_y": 55.0,
"rect_x": 1211.78,
"rect_y": -132.25
}, {
"Actor": "",
"Dialogue": "You have {apple} in your hands and {basket} in your basket. What will you do ?",
"FormattedDialogue": "You have {apple} in your hands and {basket} in your basket. What will you do ?",
"RefName": "",
"filename": "res://addons/dialogue_tree/scenes/BasicDialogue.tscn",
"name": "BasicDialogue",
"rect_size_x": 170.0,
"rect_size_y": 114.0,
"rect_x": 417.795,
"rect_y": -102.25
}, {
"Conditonal": true,
"RefName": "",
"choices": [ {
"Conditional": "{apple} > 0",
"Dialogue": "Put 1 apple in the basket",
"FormattedDialogue": "Put 1 apple in the basket",
"ToolTip": ""
}, {
"Conditional": "{basket} > 0",
"Dialogue": "Take 1 apple from the basket",
"FormattedDialogue": "Take 1 apple from the basket",
"ToolTip": ""
}, {
"Conditional": "true",
"Dialogue": "Quit",
"FormattedDialogue": "Quit",
"ToolTip": ""
} ],
"filename": "res://addons/dialogue_tree/scenes/ChoiceDialogue.tscn",
"name": "ChoiceDialogue",
"rect_size_x": 488.0,
"rect_size_y": 186.0,
"rect_x": 117.795,
"rect_y": 217.75
}, {
"Actor": "",
"Dialogue": "You take 1 apple from the basket",
"FormattedDialogue": "You take 1 apple from the basket",
"RefName": "Apple",
"filename": "res://addons/dialogue_tree/scenes/BasicDialogue.tscn",
"name": "BasicDialogue3",
"rect_size_x": 170.0,
"rect_size_y": 114.0,
"rect_x": 777.795,
"rect_y": 297.75
}, {
"Actor": "",
"Dialogue": "You put 1 apple in the basket",
"FormattedDialogue": "You put 1 apple in the basket",
"RefName": "Basket",
"filename": "res://addons/dialogue_tree/scenes/BasicDialogue.tscn",
"name": "BasicDialogue2",
"rect_size_x": 170.0,
"rect_size_y": 114.0,
"rect_x": 777.795,
"rect_y": 77.75
} ]
DialogueTree = {
"dialogue": [ {
"Actor": "",
"Dialogue": "You have {apple} in your hands and {basket} in your basket. What will you do ?",
"FormattedDialogue": "You have {apple} in your hands and {basket} in your basket. What will you do ?",
"NodeName": "BasicDialogue",
"Ref": "",
"next": 1
}, {
"Choices": [ {
"Conditional": "{apple} > 0",
"Dialogue": "Put 1 apple in the basket",
"FormattedDialogue": "Put 1 apple in the basket",
"PassCondition": true,
"ToolTip": "",
"next": 3
}, {
"Conditional": "{basket} > 0",
"Dialogue": "Take 1 apple from the basket",
"FormattedDialogue": "Take 1 apple from the basket",
"PassCondition": true,
"ToolTip": "",
"next": 2
}, {
"Conditional": "true",
"Dialogue": "Quit",
"FormattedDialogue": "Quit",
"PassCondition": true,
"ToolTip": "",
"next": "End"
} ],
"Conditonal": true,
"NodeName": "ChoiceDialogue",
"Ref": ""
}, {
"Actor": "",
"Dialogue": "You take 1 apple from the basket",
"FormattedDialogue": "You take 1 apple from the basket",
"NodeName": "BasicDialogue3",
"Ref": "Apple",
"next": 0
}, {
"Actor": "",
"Dialogue": "You put 1 apple in the basket",
"FormattedDialogue": "You put 1 apple in the basket",
"NodeName": "BasicDialogue2",
"Ref": "Basket",
"next": 0
} ],
"start_index": 0
}

[node name="TestingWorld" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 1 )

[node name="Test" type="AnimationPlayer" parent="."]
"anims/New Anim2" = SubResource( 2 )

[node name="Dialogue" type="Node" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
DialogueResource = SubResource( 3 )

[node name="Dialogue2" type="Node" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
DialogueResource = SubResource( 4 )

[node name="Dialogue3" type="Node" parent="."]
script = ExtResource( 2 )
__meta__ = {
"_editor_icon": ExtResource( 3 )
}
DialogueResource = SubResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogueBasic" type="Panel" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -270.0
margin_top = -101.0
margin_right = 270.0
margin_bottom = -14.0

[node name="Label" type="Label" parent="CanvasLayer/DialogueBasic"]
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1

[node name="ChoiceBasic" type="Panel" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -270.0
margin_top = -146.0
margin_right = 270.0
margin_bottom = -14.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ChoiceBasic"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="NextTimer" type="Timer" parent="CanvasLayer"]
wait_time = 5.0
one_shot = true
[connection signal="Choice_Next" from="Dialogue2" to="." method="_on_Dialogue2_Choice_Next"]
[connection signal="Conditonal_Data_Needed" from="Dialogue2" to="." method="_on_Dialogue2_Conditonal_Data_Needed"]
[connection signal="Dialogue_Ended" from="Dialogue2" to="." method="_on_Dialogue2_Dialogue_Ended"]
[connection signal="Dialogue_Next" from="Dialogue2" to="." method="_on_Dialogue2_Dialogue_Next"]
[connection signal="Dialogue_Started" from="Dialogue2" to="." method="_on_Dialogue2_Dialogue_Started"]
[connection signal="timeout" from="CanvasLayer/NextTimer" to="." method="_on_NextTimer_timeout"]
